gcc/testsuite/gdc.test/runnable/imports/link2644c.d
module imports.link2644c;

class C(T)
{
}
