gcc/testsuite/gdc.test/fail_compilation/imports/a13311.d
module imports.a13311;

import ice13311;

class Z
{
    TextPiece piece;
    this(PieceTree owner) {}
}
